# commodities_pred

./: pyproject.toml  scrap_bcrp.py  univ_lstm_panel.py  xgb_cobre.json  xgboost.py
