[tool.poetry]
name = "commodities-prj"
version = "0.1.0"
description = ""
authors = ["alejandro <121509311+vaortizarone@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
xgboost = "^2.0.3"
shap = "^0.45.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
