[tool.poetry]
name = "commodities-prj"
version = "0.1.0"
description = ""
authors = ["alejandro <121509311+vaortizarone@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
xgboost = "^2.0.3"
shap = "^0.45.0"
matplotlib = "^3.8.4"
statsmodels = "^0.14.2"
keras = "^3.3.3"
tensorflow = "^2.16.1"
pmdarima = "^2.0.4"
panel = "^1.4.2"
plotly = "^5.21.0"
dash = "^2.16.1"
streamlit = "^1.33.0"
holoviews = "^1.18.3"
shiny = "^0.9.0"
shinywidgets = "^0.3.2"
faicons = "^0.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
